backend added more

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,9 +1,18 @@
 MONGO_URI="mongodb://127.0.0.1:27017/collegeProject"
 
-PORT =4000
+PORT =5000
+
+RESET_TOKEN_EXPIRE=1*60*60*1000
 
 JWT_SECRET_KEY=kdjajldjajsdfioedkfajijfdsjaidkf
 
 SMTP_MAIL=yashgupta5532@gmail.com
 
-SMTP_PASSWORD=zwcc bnhj soxk ubcg
+# SMTP_PASSWORD=zwcc bnhj soxk ubcg
+
+SMTP_PASSWORD=bjgh ngtt kilh koqm    #newwer non
+
+CLOUD_NAME=dbd0psf0f
+CLOUD_API_KEY=765999131578598
+CLOUD_SECRET_KEY=Zcu5wrrfuyZfm2pQKOLKtxOFm2c
+
