--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
+    "jest": "^27.5.1",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
@@ -20,11 +21,12 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-to-print": "^2.14.15",
     "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
@@ -50,7 +52,13 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ],
+    "test": [
+      "node"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://127.0.0.1:5000",
+  "devDependencies": {
+    "babel-jest": "^29.7.0"
+  }
 }
