--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,13 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-to-print": "^2.14.15",
     "redux": "^4.2.1",
     "redux-mock-store": "^1.5.4",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
