--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,6 +2,8 @@ MONGO_URI="mongodb://127.0.0.1:27017/collegeProject"
 
 PORT =5000
 
+FRONT_END_URL="http://localhost:3000"
+
 RESET_TOKEN_EXPIRE=1*60*60*1000
 
 JWT_SECRET_KEY=kdjajldjajsdfioedkfajijfdsjaidkf
