--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,4 +1,5 @@
-MONGO_URI="mongodb://127.0.0.1:27017/collegeProject"
+# MONGO_URI="mongodb://127.0.0.1:27017/collegeProject"
+MONGO_URI="mongodb+srv://yashgupta5532:yash1234@mess.qiqcijc.mongodb.net/MessProject"
 
 PORT =5000
 
