some changes in update profile and post

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,5 +1,8 @@
-# MONGO_URI="mongodb://127.0.0.1:27017/collegeProject"
-MONGO_URI="mongodb+srv://yashgupta5532:yash1234@mess.qiqcijc.mongodb.net/MessProject"
+
+
+MONGO_URI="mongodb://127.0.0.1:27017/collegeProject"
+
+# MONGO_URI="mongodb+srv://yashgupta5555:yash1234@mess.qiqcijc.mongodb.net/Mess?retryWrites=true&w=majority"
 
 PORT =5000
 
@@ -11,7 +14,6 @@ JWT_SECRET_KEY=kdjajldjajsdfioedkfajijfdsjaidkf
 
 SMTP_MAIL=yashgupta5532@gmail.com
 
-# SMTP_PASSWORD=zwcc bnhj soxk ubcg
 
 SMTP_PASSWORD=bjgh ngtt kilh koqm    #newwer non
 
