--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/yashgupta5532/college_project/issues"
   },
-  "homepage": "https://github.com/yashgupta5532/college_project#readme"
+  "homepage": "https://github.com/yashgupta5532/college_project#readme",
+  "dependencies": {
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3"
+  }
 }
